Bidirectional working with BestFirst. Some Runtime Errors to solve. Should move goal checks out of AStar.step and BestFrist.step